[build-system]
requires = ["hatchling", "coloredlogs", "asyncio", "python-dotenv"]
build-backend = "hatchling.build"

[project]
name = "helperclass"
version = "0.0.1"
authors = [
  { name="Lonely-Dark", email="vlad10game@gmail.com" },
]
description = "A package for my local projects"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lonely-Dark/helperclass"
"Bug Tracker" = "https://github.com/Lonely-Dark/helperclass/issues"
