[tool.poetry]
name = "helperclass-pack"
version = "0.1.0"
description = ""
authors = ["Lonely-Dark <vlad10game@gmail.com>"]
readme = "README.md"
packages = [{include = "helperclass_pack"}]

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
